fixing linter errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
     "rules": {
       "semi": [0, "always"]
     },
-    "ecmaVersion": 6,
+    "parserOptions" : {
+      "ecmaVersion": 6
+    },
     "env": {
       "browser": true,
       "node": true
