--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-standard": "^1.3.2"
   },
   "dependencies": {
-    "is-my-json-valid": "*"
+    "fetch-cachestorage": "^1.0.0-alpha",
+    "is-my-json-valid": "*",
+    "node-fetch": "^2.3.0"
   }
 }
