--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iglu-javascript-client",
   "version": "0.0.0",
   "description": "A javascript client for Iglu schema servers and Snowplow events",
-  "licesnse": "See LICENSE-2.0.txt",
+  "license": "Apache-2.0",
   "main": "src/iglu-client.js",
   "scripts": {
     "build": "npm run lint && npm run build-iglu && npm run build-worker && npm run build-worker-client",
