--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "url": "https://github.com/snowplow/iglu-javascript-client/issues"
   },
   "devDependencies": {
-    "browserify": "*",
-    "eslint": "*",
+    "browserify": "^17.0.0",
+    "eslint": "^8.22.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2"
   },
   "dependencies": {
-    "is-my-json-valid": "*"
+    "is-my-json-valid": "^2.20.6"
   }
 }
